samples/_failures_safe/1761416710_1b0bb5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d6654710.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_d6654710.c:164:9: error: expected expression at end of input
  164 |         case TOKEN_INVALID: return
      |         ^~~~
./samples/SAFE/__tmp_d6654710.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d6654710.c:164:9: error: expected declaration or statement at end of input
